force-app/main/default/objects/Employees__c/fields/Treatment_For_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Treatment_For_Allergy__c</fullName>
    <label>Treatment For Allergy</label>
    <type>TextArea</type>
</CustomField>