force-app/main/default/objects/Employees__c/fields/Treatment_For_Condition__c.field-meta.xml
<CustomField>
    <fullName>Treatment_For_Condition__c</fullName>
    <label>Treatment For Condition</label>
    <type>TextArea</type>
</CustomField>