force-app/main/default/objects/Employees__c/fields/Uniform_Pant_Size__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Pant_Size__c</fullName>
    <label>Pant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>