force-app/main/default/objects/Employees__c/fields/Uniform_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Shirt_Size__c</fullName>
    <label>Shirt</label>
    <length>5</length>
    <type>Text</type>
</CustomField>