force-app/main/default/objects/Employees__c/fields/Uniforms__c.field-meta.xml
<CustomField>
    <fullName>Uniforms__c</fullName>
    <label>Coveralls</label>
    <length>5</length>
    <type>Text</type>
</CustomField>