force-app/main/default/objects/Employees__c/fields/Update_on__c.field-meta.xml
<CustomField>
    <fullName>Update_on__c</fullName>
    <label>Updated on</label>
    <type>Date</type>
</CustomField>