force-app/main/default/objects/Employees__c/fields/USI__c.field-meta.xml
<CustomField>
    <fullName>USI__c</fullName>
    <inlineHelpText>Each individual must now obtain an ISU # which will be used for all training completed through an RTO.</inlineHelpText>
    <label>USI #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>