force-app/main/default/objects/Employees__c/fields/Work_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Work_Mobile__c</fullName>
    <label>Work Mobile</label>
    <type>Phone</type>
</CustomField>