force-app/main/default/objects/Employees__c/fields/X2nd_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Emergency_Contact__c</fullName>
    <label>Emergency Contact (EC2)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>