force-app/main/default/objects/Employees__c/fields/X2nd_Emergency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Emergency_Contact_Number__c</fullName>
    <label>Alternate Contact (EC2)</label>
    <type>Phone</type>
</CustomField>