force-app/main/default/objects/Employees__c/fields/X2nd_Other_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Other_Contact_Details__c</fullName>
    <label>2nd Other Contact Details</label>
    <type>TextArea</type>
</CustomField>