force-app/main/default/objects/Employees__c/fields/X2nd_Relationship_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Relationship_to_Employee__c</fullName>
    <label>Relationship to Employee (EC2)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>