force-app/main/default/objects/Employees__c/fields/Yrs_in_Employment__c.field-meta.xml
<CustomField>
    <fullName>Yrs_in_Employment__c</fullName>
    <formula>ROUND((TODAY() - Start_Date__c) / 365.25, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yrs in Employment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>