force-app/main/default/objects/Employees__c/recordTypes/Active_Employee.recordType-meta.xml
<RecordType>
    <fullName>Active_Employee</fullName>
    <active>true</active>
    <label>Active Employee</label>
</RecordType>