force-app/main/default/objects/Employees__c/recordTypes/Inactive_Employee.recordType-meta.xml
<RecordType>
    <fullName>Inactive_Employee</fullName>
    <active>true</active>
    <label>Inactive Employee</label>
</RecordType>