force-app/main/default/objects/Employees__c/listViews/Active_Employees_AB.listView-meta.xml
<ListView>
    <fullName>Active_Employees_AB</fullName>
    <columns>NAME</columns>
    <columns>Identifies_as_Aboriginal_Torres_Strait__c</columns>
    <columns>Team_lookup__c</columns>
    <columns>Assigned_to_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <filters>
        <field>Identifies_as_Aboriginal_Torres_Strait__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>WD - Aboriginal/Torres Straight</label>
    <sharedTo>
        <group>HR</group>
        <group>Managing_Director</group>
        <role>COO</role>
    </sharedTo>
</ListView>