force-app/main/default/objects/Employees__c/listViews/Active_Employees_Contact.listView-meta.xml
<ListView>
    <fullName>Active_Employees_Contact</fullName>
    <columns>NAME</columns>
    <columns>Em_ID__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Mobile__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Personal_Email__c</columns>
    <columns>Street_Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Post_Code__c</columns>
    <columns>Local_Gov_Area__c</columns>
    <columns>Postal_Address__c</columns>
    <columns>Santos_Security_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <label>WD - Employee Details</label>
    <sharedTo>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <role>COO</role>
    </sharedTo>
</ListView>