force-app/main/default/objects/Employees__c/listViews/Active_Employees_EC.listView-meta.xml
<ListView>
    <fullName>Active_Employees_EC</fullName>
    <columns>NAME</columns>
    <columns>Emergency_Contact__c</columns>
    <columns>Relationship_EC1__c</columns>
    <columns>EC_1_Mobile__c</columns>
    <columns>Emergency_Cont__c</columns>
    <columns>X2nd_Emergency_Contact__c</columns>
    <columns>Relationship_EC2__c</columns>
    <columns>EC_2_Mobile__c</columns>
    <columns>X2nd_Emergency_Contact_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <label>WD - Emergency Contacts</label>
    <sharedTo>
        <role>COO</role>
        <role>Crew_Logistics_Coordinator</role>
        <role>HR_Manager</role>
        <role>HSEQ_Manager</role>
        <role>Managing_Director</role>
    </sharedTo>
</ListView>