force-app/main/default/objects/Employees__c/listViews/AFM_Register_of_Supervisors.listView-meta.xml
<ListView>
    <fullName>AFM_Register_of_Supervisors</fullName>
    <columns>Status__c</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>On_Shift__c</columns>
    <columns>USI__c</columns>
    <columns>Santos_Security_Number__c</columns>
    <columns>Geotab__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pre Employment,Active</value>
    </filters>
    <filters>
        <field>PositionLookup__c</field>
        <operation>contains</operation>
        <value>Transport,Administrative Manager,Business Manager,director,HR lead</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <filters>
        <field>PositionLookup__c</field>
        <operation>notEqual</operation>
        <value>transport operator</value>
    </filters>
    <label>AFM - Responsible Persons</label>
    <sharedTo>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>