force-app/main/default/objects/Employees__c/listViews/All_Employees_No_Team.listView-meta.xml
<ListView>
    <fullName>All_Employees_No_Team</fullName>
    <columns>Team_lookup__c</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>Crew__c</columns>
    <columns>NAME</columns>
    <columns>PositionLookup__c</columns>
    <columns>On_Shift__c</columns>
    <columns>Mobile__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pre Employment,Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <filters>
        <field>Team_lookup__c</field>
        <operation>equals</operation>
    </filters>
    <label>All | No Team</label>
    <sharedTo>
        <group>BOO</group>
        <group>Camp_Supervisor</group>
        <group>HR</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Transport</group>
    </sharedTo>
</ListView>