force-app/main/default/objects/Employees__c/listViews/All_Trades_AutoElec_On_Off.listView-meta.xml
<ListView>
    <fullName>All_Trades_AutoElec_On_Off</fullName>
    <columns>Status__c</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Position__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>On_Shift__c</columns>
    <columns>Vaccine_Status__c</columns>
    <columns>USI__c</columns>
    <columns>Santos_Security_Number__c</columns>
    <columns>Geotab__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pre Employment,Active</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>trades</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <filters>
        <field>Position__c</field>
        <operation>equals</operation>
        <value>Auto Electrician</value>
    </filters>
    <label>All Trades - AutoElec (On/Off)</label>
</ListView>