force-app/main/default/objects/Employees__c/listViews/All_Transport_App_Licence.listView-meta.xml
<ListView>
    <fullName>All_Transport_App_Licence</fullName>
    <columns>Status__c</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>NAME</columns>
    <columns>Driver_User__c</columns>
    <columns>Driver_Username_Email__c</columns>
    <columns>Driver_App_Password__c</columns>
    <columns>Mobile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PositionLookup__c</field>
        <operation>equals</operation>
        <value>Transport Operator</value>
    </filters>
    <filters>
        <field>Driver_User__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Transport | App Licence</label>
    <sharedTo>
        <group>BOO</group>
        <group>Transport</group>
    </sharedTo>
</ListView>