force-app/main/default/objects/Employees__c/listViews/All_WD_Active_Employee_Birthday_List.listView-meta.xml
<ListView>
    <fullName>All_WD_Active_Employee_Birthday_List</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Birthday__c</columns>
    <columns>Age__c</columns>
    <columns>Mobile__c</columns>
    <columns>Personal_Email__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Post_Code__c</columns>
    <columns>City__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Birthday__c</field>
        <operation>contains</operation>
    </filters>
    <label>All WD Active Employee - Birthday List</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
    </sharedTo>
</ListView>