force-app/main/default/objects/Employees__c/listViews/All_WD_Active_Employee_Indigenous.listView-meta.xml
<ListView>
    <fullName>All_WD_Active_Employee_Indigenous</fullName>
    <columns>Em_ID__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>Mobile__c</columns>
    <columns>Local_Gov_Area__c</columns>
    <columns>City__c</columns>
    <columns>Post_Code__c</columns>
    <columns>Personal_Email__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Identifies_as_Aboriginal_Torres_Strait__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pre Employment,Active</value>
    </filters>
    <label>All WD Active Employee - Indigenous</label>
    <sharedTo>
        <group>Finance</group>
        <group>HR</group>
        <group>Safety</group>
    </sharedTo>
</ListView>