force-app/main/default/objects/Employees__c/listViews/All_WD_Active_Pre_Emp_USI.listView-meta.xml
<ListView>
    <fullName>All_WD_Active_Pre_Emp_USI</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>Mobile__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Post_Code__c</columns>
    <columns>City__c</columns>
    <columns>Personal_Email__c</columns>
    <columns>USI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pre Employment,Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <label>All WD Active/Pre Emp - USI</label>
    <sharedTo>
        <group>HR</group>
    </sharedTo>
</ListView>