force-app/main/default/objects/Employees__c/listViews/All_WD_Pre_Employment_Commencing.listView-meta.xml
<ListView>
    <fullName>All_WD_Pre_Employment_Commencing</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to_Unit__c</columns>
    <columns>PositionLookup__c</columns>
    <columns>Start_Day__c</columns>
    <columns>Mobile__c</columns>
    <columns>Street_Address__c</columns>
    <columns>Post_Code__c</columns>
    <columns>City__c</columns>
    <columns>Personal_Email__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pre Employment,Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Employees__c.Active_Employee</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All WD - Pre Employment / Commencing</label>
    <sharedTo>
        <group>HR</group>
        <group>Managing_Director</group>
    </sharedTo>
</ListView>